; ModuleID = '/home/carl/AnghaBench/qmk_firmware/layouts/community/ortho_4x12/symbolic/extr_keymap.c_LowerSwitch.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/layouts/community/ortho_4x12/symbolic/extr_keymap.c_LowerSwitch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LowerSwitch(%struct.TYPE_5__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  store i32 1, i32* %13, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @LowerPressed(i32 %14)
  br label %20

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  store i32 0, i32* %17, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @LowerReleased(i32 %18)
  br label %20

20:                                               ; preds = %16, %12
  ret i32 0
}

declare dso_local i32 @LowerPressed(i32) #1

declare dso_local i32 @LowerReleased(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
